Added speech button css. Re-arranged cocktail container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <div class="wrapper">
+            <!-- HEADER -->
             <div class="header-content">
                 <div class="header-text">
                     <h1>
@@ -26,29 +27,37 @@
             </div>
         </div>
     </header>
+    <!-- END OF HEADER -->
     <main>
         <div class="wrapper">
-
-            <div class="cocktail-recipe-container flex">
+            <div class="page-container flex">
+                <!-- SPEECH BUBBLE -->
                 <div class="bubble-container">
                     <div class="bubble flex">
                         <button type="submit">Beer Me!</button>
                     </div>
                     <div class="bubble-pointer"></div>
                 </div>
+                <!-- SPEECH BUBBLE ENDS -->
                 <section>
+                    <!-- COCKTAIL DISPLAY -->
                     <div class="inner-box">
-                        <div class="name-and-glass-container flex">
-                            <p class="name"></p>
-                            <p class="glass"></p>
+                        <div class="name-glass-image-container flex">
+                            <div class="name-glass">
+                                <p class="name"></p>
+                                <p class="glass"></p>
+                            </div>
+                            <div class="image"></div>
                         </div>
                         <div class="ingredients-container flex">
+
                             <div class="measures"></div>
                             <div class="ingredients"></div>
                         </div>
                         <p class="instructions"></p>
-                        <div class="image"></div>
+
                     </div>
+                    <!-- COCKTAIL DISPLAY ENDS -->
                 </section>
             </div>
         </div>
