--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/setup.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/80d230e595.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/style.css">
     <title>Document</title>
@@ -19,9 +20,9 @@
                     <h1>
                         <span class="beer"> Beer Me</span><span class="cocktail-title"> A Cocktail</span>
                     </h1>
-                    <h2>A random cocktail recipe generator</h2>
+                    <h2>Random cocktail recipes</h2>
                 </div>
-                <div class="cocktail-glass-container">
+                <div class="cocktail-glass-container flex">
                     <i class="fas fa-cocktail cocktail-glass"></i>
                 </div>
             </div>
